--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<div class="login">
+  <input [(ngModel)]='user' placeholder="Username">
+  <input [(ngModel)]='password' placeholder="Password" type='password'>
+  <button (click)='logar()'>Login</button>
+</div>
