--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,32 +1,47 @@
-.login{
-    display: grid;
-    justify-content: center;
-    align-items: center;
+.login-container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.login button{
-    width: 100%;
-    height: 25px;
-    border: none;
-    border-radius: 15px;
-    background-color: cyan;
-    margin-bottom: 15px;
+#login {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  background-color: dodgerblue;
 }
 
-.login button:hover{
-    width: 100%;
-    border: none;
-    border-radius: 15px;
-    background: linear-gradient(90deg, Cyan);
-    cursor: pointer;
+h1{
+  position: relative;
+  left: 30%;
 }
 
-.login input{
-    width: 100%;
-    height: 25px;
-    border: none;
-    border-radius: 15px;
-    margin-bottom: 15px;
-   background-color: cyan;
+#login button{
+  width: 110px;
+  height: 25px;
+  border: none;
+  border-radius: 15px;
+  background-color: cyan;
+  margin-bottom: 15px;
+  position: relative;
+  left: 20%;
+}
 
+#login button:hover {
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background: linear-gradient(90deg, Cyan);
+  cursor: pointer;
+}
+
+#login input {
+
+  width: 100%;
+  height: 25px;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 15px;
 }
