--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
-<div class="login">
-  <input [(ngModel)]='user' placeholder="Username">
-  <input [(ngModel)]='password' placeholder="Password" type='password'>
-  <button (click)='logar()'>Login</button>
+<div class="login-container">
+  <div id="login">
+    <h1>Login</h1>
+    <input [(ngModel)]='user' placeholder="Username">
+    <input [(ngModel)]='password' placeholder="Password" type='password'>
+    <button (click)='logar()'>Login</button>
+  </div>
 </div>
